# icq-parser

./: .gitignore  README.md  icq-parser.spec  pyproject.toml  version.txt
binaries/: icq-parser-1.2.0.exe.sha256  icq-parser-1.2.1.exe.sha256  icq-parser-1.2.2.exe.sha256  icq-parser-1.2.3.exe.sha256  icq-parser-1.3.0.exe.sha256  icq-parser-1.4.0.exe.sha256  icq-parser-1.4.1.exe.sha256
docs/: BREAKDOWN.md  DialogUiSettings.md  FileSharingURL.md
icq_parser/: icq_enums.py  icq_parser.py  icq_web.py  icqweb.py
icq_parser/static/: convo.css  style.css
icq_parser/templates/: attachments.html  contact.html  conversations.html  desktop-conversations.html  index.html  results.html
